# DeepSeek-Reasonix

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  REASONIX.md  package-lock.json  package.json  tsup.config.ts  vitest.config.ts
.github/: issue-labeler.yml
crates/reasonix-render/: Cargo.toml
crates/reasonix-render/src/: decode_only.rs  input.rs  integrated.rs  lib.rs  main.rs  napi_api.rs  render.rs  scene.rs  state.rs
crates/reasonix-render/src/whole_screen/: boot.rs  demo.rs  dock.rs  list_picker.rs  mod.rs  overlay.rs  overlay_at.rs  paint.rs
crates/reasonix-render/src/whole_screen/cards/: mod.rs  notify.rs
crates/reasonix-render/tests/: decode_only.rs  input.rs  render.rs  round_trip.rs  whole_screen.rs
dashboard/: app.css  app.js
design/: tui-redesign-ink.html  tui-redesign.html
desktop/: SIGNING.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: ARCHITECTURE.md  CLI-REFERENCE.md  arch-i18n.js  architecture.html  cli-ref-i18n.js  cli-reference.html  configuration.html  download.html  guide-i18n.js  guide.css  i18n.js  index.html  qq-connect.md  qq-connect.zh-CN.md  sitemap.xml  styles.css  term-anim.js
download-site/: README.md  _headers  _redirects  download.html  index.html
examples/: mcp-server-demo.ts
patches/: ink+7.0.2.patch
scripts/: dev-prepare.mjs  mirror-release-to-gitee.mjs  probe-budget-sweep.mts  probe-empty-output-diagnosis.mts  probe-orchestrator-cache.mjs  probe-session-e2e-long.mts  probe-session-e2e-post-patch.mts  probe-session-e2e.mts  probe-subagent-distillation.mts  (+3 more)
(+551 files in other folders)
