[package]
name = "reasonix-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Off by default — `cargo test` / clippy / the standalone debug bin all
# build against the rlib without N-API symbols (which only Node provides
# at .node load time). Release CI + dev-prepare turn this on when building
# the cdylib that Node loads.
default = []
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]

[dependencies]
anyhow = "1"
arboard = { version = "3", default-features = false }
chrono = { version = "0.4", features = ["clock"] }
crossterm = "0.29"
ctrlc = { version = "3", features = ["termination"] }
napi = { version = "2", default-features = false, features = ["napi6", "serde-json"], optional = true }
napi-derive = { version = "2", optional = true }
pulldown-cmark = { version = "0.13", default-features = false }
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"

[build-dependencies]
napi-build = { version = "2", optional = true }
